// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toIncludeRepeated fails when given string includes given substring 1 time 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toIncludeRepeated(</intensity><green>expected</color><dim>)</intensity>

Expected string to not include repeated 1 times:
  <green>"ell"</color>
Received:
  <red>"hello world"</color>"
`;

exports[`.not.toIncludeRepeated fails when given string includes given substring to the given occurrences 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toIncludeRepeated(</intensity><green>expected</color><dim>)</intensity>

Expected string to not include repeated 3 times:
  <green>"l"</color>
Received:
  <red>"hello world"</color>"
`;

exports[`.toIncludeRepeated fails when given string does not have a given substring the correct number of times 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeRepeated(</intensity><green>expected</color><dim>)</intensity>

Expected string to include repeated 2 times:
  <green>"world"</color>
Received:
  <red>"hello world"</color>"
`;

exports[`.toIncludeRepeated fails when given string does not include given substring 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toIncludeRepeated(</intensity><green>expected</color><dim>)</intensity>

Expected string to include repeated 1 times:
  <green>"bob"</color>
Received:
  <red>"hello world"</color>"
`;
